<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//Atrium
	strEnOceanSwitch_Gang_3_109_PladeA				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;	

	//Gange
    strEnOceanSwitch_Gang_4_211_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Gang_4_211_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	//Rum				
	strEnOceanSwitch_Rum_4_206_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_206_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_207_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_207_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_211A_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_211A_Ekstra				: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_213_Indgang				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_213_Pendler				: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_215								: Tc2_EnOcean.STR_EnOceanSwitch;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>